--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
       <header class="header">
         <h1 class="header__main">The Sunny Brighton Times</h1>
-        <p class="header__date">Saturday April 8 2023</p>
+        <p class="header__date">&nbsp;<span class="text"></span></p>
       </header>
 
 
-      <!-- <div class="sidebar__wrapper"> -->
+
       <div class="sidebar">
         <ul class="sidebar__list">
           <li class="sidebar__item">
@@ -107,7 +107,7 @@
           <a href="#" class="sidebar__info-link sidebar__info-link--2">Subscribe</a>
         </div>
       </div>
-      <!-- </div> -->
+
 
 
 
@@ -208,8 +208,8 @@
             <div class="blog__right-text-div">
               <span>&ldquo;</span>
               <span>Spotlight</span>
-              <h2 class="blog__right-title">You should take no action unwillingly, selfishly, uncritically</h2>
-              <p class="blog__right-content">or with conflicting motives. Do not dress up your thoughts in smart finery: do not be a gabbler or a meddler.</p>
+              <h2 class="blog__right-title">You should take no action unwillingly</h2>
+              <p class="blog__right-content">selfishly, uncriticallyor with conflicting motives. Do not dress up your thoughts in smart finery: do not be a gabbler or a meddler.</p>
             </div>
           </div>
 
@@ -245,10 +245,10 @@
               </div>
 
               <div class="blog__right-quote-div">
-                <p class="blog__right-quote"><span>&ldquo;</span> You spend your 20s figure it out, you spend your 30s doing it, and then you spend your 40s enjoing it.</p>
+                <p class="blog__right-quote"><span>&ldquo;</span> I disaprove of what you say, but I will defend to the death your right to say it.</p>
                 <div class="blog__right-author-box">
-                  <img src="images/casey-neistat.jpeg" class="blog__right-portrait" alt="Marcus Aurelius Portrait">
-                  <span>Casey Neistat</span>
+                  <img src="images/evelyn-hall.jpg" class="blog__right-portrait" alt="Marcus Aurelius Portrait">
+                  <span>Evelyn Beatrice Hall</span>
                 </div>
               </div>
 
@@ -277,7 +277,7 @@
 
       <div class="blog__bottom">
         <div class="blog__bottom-item">
-          <h1 class="blog__bottom-title">A True Story Told by the Beadle of the Church</h1>
+          <h1 class="blog__bottom-title">A True Story Told by the Church Beadle</h1>
           <p class="blog__bottom-content">Foma Grigorievich was known to have this special sort of quirk: he mortally disliked telling the same thing over again.</p>
           <span>5 min read</span>
         </div>
@@ -308,13 +308,13 @@
 
 
         <div class="blog__featured-article">
-          <img src="" class="blog__featured-img" alt="">
-          <h2 class="blog__featured-title">Crypto-pegged stocks surging as bitcoin hits 10-month high</h2>
+          <img src="images/featured1.jpeg" class="blog__featured-img" alt="Canaletto - Venice - The Doge's Palace and the Riva degli Schiavoni">
+          <h2 class="blog__featured-title">After Impressionism: Inventing Modern Art at the National Gallery</h2>
           <div class="blog__featured-detail">
-            <span>by Gram Handcock</span>
+            <span>by Melanie McDonagh</span>
             <span> 3 min read</span>
           </div>
-          <p class="blog__featured-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus cumque sapiente ipsa accusamus! Nisi debitis, maxime molestias quasi eveniet minus praesentium fugiat vitae, libero neque pariatur soluta ab animi fugit.</p>
+          <p class="blog__featured-content">Where do we come from? What are we? Where are we going? It sums up the defining mood of the generation represented in this exhibition at the National Gallery, between the last Impressionist exhibition in 1886 and war in 1914 when the world fell apart.</p>
           <a href="#" class="blog__featured-link">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -335,13 +335,13 @@
 
 
         <div class="blog__featured-article">
-          <img src="" class="blog__featured-img" alt="">
-          <h2 class="blog__featured-title">Crypto-pegged stocks surging as bitcoin hits 10-month high</h2>
+          <img src="images/featured2.jpeg" class="blog__featured-img" alt="Pieter Brueghel the Elder - The Dutch Proverbs">
+          <h2 class="blog__featured-title">National Gallery to reopen with exhibition on Pieter Brueghel</h2>
           <div class="blog__featured-detail">
-            <span>by Gram Handcock</span>
-            <span> 3 min read</span>
+            <span>by Ellie Iorizzo</span>
+            <span> 5 min read</span>
           </div>
-          <p class="blog__featured-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus cumque sapiente ipsa accusamus! Nisi debitis, maxime molestias quasi eveniet minus praesentium fugiat vitae, libero neque pariatur soluta ab animi fugit.</p>
+          <p class="blog__featured-content">The exhibition will feature more than 10 paintings on display for the first time, highlighting the history of art famous faces, from George Bernard Shaw to Vivien Leigh, John Gielgud to Princess Alexandra</p>
           <a href="#" class="blog__featured-link">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -361,13 +361,13 @@
         </div>
 
         <div class="blog__featured-article">
-          <img src="" class="blog__featured-img" alt="">
-          <h2 class="blog__featured-title">Crypto-pegged stocks surging as bitcoin hits 10-month high</h2>
+          <img src="images/featured3.jpg" class="blog__featured-img" alt="Jean-Honoré Fragonard - Psyche showing her Sisters her Gifts from Cupid">
+          <h2 class="blog__featured-title">Five key Renaissance Paintings from the Collection</h2>
           <div class="blog__featured-detail">
-            <span>by Gram Handcock</span>
-            <span> 3 min read</span>
+            <span>by Joe Doe</span>
+            <span> 7 min read</span>
           </div>
-          <p class="blog__featured-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus cumque sapiente ipsa accusamus! Nisi debitis, maxime molestias quasi eveniet minus praesentium fugiat vitae, libero neque pariatur soluta ab animi fugit.</p>
+          <p class="blog__featured-content">Supported by the Chanel Culture Fund, the exhibition is the first to open as part of the National Portrait Gallery’s 2023 programme after three years of major refurbishments.</p>
           <a href="#" class="blog__featured-link">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -387,13 +387,13 @@
         </div>
 
         <div class="blog__featured-article">
-          <img src="" class="blog__featured-img" alt="">
-          <h2 class="blog__featured-title">Crypto-pegged stocks surging as bitcoin hits 10-month high</h2>
+          <img src="images/featured4.jpg" class="blog__featured-img" alt="Claude-Joseph Vernet - A Landscape at Sunset" style="filter: grayscale(1) brightness(150%)">
+          <h2 class="blog__featured-title">Renaissance Art - Europe's Cultural Rebirth</h2>
           <div class="blog__featured-detail">
-            <span>by Gram Handcock</span>
-            <span> 3 min read</span>
+            <span>by Christopher Miller</span>
+            <span> 8 min read</span>
           </div>
-          <p class="blog__featured-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus cumque sapiente ipsa accusamus! Nisi debitis, maxime molestias quasi eveniet minus praesentium fugiat vitae, libero neque pariatur soluta ab animi fugit.</p>
+          <p class="blog__featured-content">Italian Renaissance painting is the painting of the period beginning in the late 13th century and flourishing from the early 15th to late 16th centuries, occurring in the Italian Peninsula, which was at that time divided into many political states, some independent but others controlled by external powers.</p>
           <a href="#" class="blog__featured-link">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -413,13 +413,13 @@
         </div>
 
         <div class="blog__featured-article">
-          <img src="" class="blog__featured-img" alt="">
-          <h2 class="blog__featured-title">Crypto-pegged stocks surging as bitcoin hits 10-month high</h2>
+          <img src="images/featured5.jpeg" class="blog__featured-img" alt="Joseph Wright 'of Derby' - An Experiment on a Bird in the Air Pump">
+          <h2 class="blog__featured-title">The Works of Joseph Wright of Derby</h2>
           <div class="blog__featured-detail">
-            <span>by Gram Handcock</span>
-            <span> 3 min read</span>
+            <span>by Jonathan Smith</span>
+            <span> 11 min read</span>
           </div>
-          <p class="blog__featured-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus cumque sapiente ipsa accusamus! Nisi debitis, maxime molestias quasi eveniet minus praesentium fugiat vitae, libero neque pariatur soluta ab animi fugit.</p>
+          <p class="blog__featured-content">Joseph Wright ARA, styled Joseph Wright of Derby, was an English landscape and portrait painter. He has been acclaimed as "the first professional painter to express the spirit of the Industrial Revolution".</p>
           <a href="#" class="blog__featured-link">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -442,35 +442,40 @@
 
 
       <div class="blog__marquee-box">
-        Marquee
+
+        <div class="wrapper">
+          <div class="marquee">
+            <div class="marquee__inner">
+              <p class="marquee__paragraph">NEW Exhibition - National Portrait Gallery</p>
+              <p class="marquee__paragraph">Now In - Thin Air at The Beams NOW</p>
+              <p class="marquee__paragraph">NYC Opens After Long Lockdown Check</p>
+
+              <p class="marquee__paragraph">NEW Exhibition - National Portrait Gallery</p>
+              <p class="marquee__paragraph">Now In - Thin Air at The Beams NOW</p>
+              <p class="marquee__paragraph">NYC Opens After Long Lockdown Check</p>
+            </div>
+          </div>
+        </div>
+
       </div>
-
-
-
 
       
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
 
 
 
   </main>
+
+
+    <!-- SCRIPT FOR TYPING ANIMATION -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"
+      integrity="sha512-BdHyGtczsUoFcEma+MfXc71KJLv/cd+sUsUaYYf2mXpfG/PtBjNXsPo78+rxWjscxUYN2Qr2+DbeGGiJx81ifg=="
+      crossorigin="anonymous"
+    ></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script defer src="scripts.js"></script>
