--- a/index.html
+++ b/index.html
@@ -100,6 +100,35 @@
               </svg>
             </a>
           </li>
+
+          <li class="sidebar__item">
+            <a href="articlev1.html" class="sidebar__link sidebar__article">Article page v1.0
+              <svg
+                fill="none"
+                stroke="currentColor"
+                stroke-width=".7"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                viewBox="0 0 24 24"
+                >
+                <path d="M7 17L17 7M7 7h10v10" />
+              </svg>
+            </a>
+          </li>
+          <li class="sidebar__item sidebar__article">
+            <a href="articlev1.html" class="sidebar__link">Article page v2.0
+              <svg
+                fill="none"
+                stroke="currentColor"
+                stroke-width=".7"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                viewBox="0 0 24 24"
+                >
+                <path d="M7 17L17 7M7 7h10v10" />
+              </svg>
+            </a>
+          </li>
         </ul>
 
         <div class="sidebar__info">
