--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </a>
           </li>
           <li class="sidebar__item sidebar__article">
-            <a href="articlev1.html" class="sidebar__link">Article page v2.0
+            <a href="articlev2.html" class="sidebar__link">Article page v2.0
               <svg
                 fill="none"
                 stroke="currentColor"
@@ -238,7 +238,7 @@
               <span>&ldquo;</span>
               <span>Spotlight</span>
               <h2 class="blog__right-title">You should take no action unwillingly</h2>
-              <p class="blog__right-content">selfishly, uncriticallyor with conflicting motives. Do not dress up your thoughts in smart finery: do not be a gabbler or a meddler.</p>
+              <p class="blog__right-content">selfishly, uncriticallyor with conflicting motives. Do not dress up your thoughts in smart finery</p>
             </div>
           </div>
 
@@ -306,13 +306,13 @@
 
       <div class="blog__bottom">
         <div class="blog__bottom-item">
-          <h1 class="blog__bottom-title">A True Story Told by the Church Beadle</h1>
+          <h1 class="blog__bottom-title">Story Told by the Church Beadle</h1>
           <p class="blog__bottom-content">Foma Grigorievich was known to have this special sort of quirk: he mortally disliked telling the same thing over again.</p>
           <span>5 min read</span>
         </div>
 
         <div class="blog__bottom-item">
-          <h1 class="blog__bottom-title">The Last Day before Christmas had passed</h1>
+          <h1 class="blog__bottom-title">The Last Day before Christmas</h1>
           <p class="blog__bottom-content">A wintry, clear night came. The stars peeped out. The crescent moon rose majestically in the sky to give light to good people.</p>
           <span>4 min read</span>
         </div>
