--- a/index.html
+++ b/index.html
@@ -323,6 +323,42 @@
           <span>7 min read</span>
         </div>
 
+        <div class="blog__bottom-item">
+          <h1 class="blog__bottom-title">Story Told by the Church Beadle</h1>
+          <p class="blog__bottom-content">Foma Grigorievich was known to have this special sort of quirk: he mortally disliked telling the same thing over again.</p>
+          <span>5 min read</span>
+        </div>
+
+        <div class="blog__bottom-item">
+          <h1 class="blog__bottom-title">The Last Day before Christmas</h1>
+          <p class="blog__bottom-content">A wintry, clear night came. The stars peeped out. The crescent moon rose majestically in the sky to give light to good people.</p>
+          <span>4 min read</span>
+        </div>
+
+        <div class="blog__bottom-item">
+          <h1 class="blog__bottom-title">Noise and Thunder at the end of Kiev</h1>
+          <p class="blog__bottom-content">Captain gorobets is celebrating his son's wedding. Many people liked to eat well, better still did they like to drink.</p>
+          <span>7 min read</span>
+        </div>
+
+        <div class="blog__bottom-item">
+          <h1 class="blog__bottom-title">Story Told by the Church Beadle</h1>
+          <p class="blog__bottom-content">Foma Grigorievich was known to have this special sort of quirk: he mortally disliked telling the same thing over again.</p>
+          <span>5 min read</span>
+        </div>
+
+        <div class="blog__bottom-item">
+          <h1 class="blog__bottom-title">The Last Day before Christmas</h1>
+          <p class="blog__bottom-content">A wintry, clear night came. The stars peeped out. The crescent moon rose majestically in the sky to give light to good people.</p>
+          <span>4 min read</span>
+        </div>
+
+        <div class="blog__bottom-item">
+          <h1 class="blog__bottom-title">Noise and Thunder at the end of Kiev</h1>
+          <p class="blog__bottom-content">Captain gorobets is celebrating his son's wedding. Many people liked to eat well, better still did they like to drink.</p>
+          <span>7 min read</span>
+        </div>
+
       </div>
 
 
