--- a/articlev1.html
+++ b/articlev1.html
@@ -28,7 +28,7 @@
       <div class="article1__title-content--wrapper">
         <div class="article1__title-box">
           <h1 class="article1__title">At one time <br> we dared not even <br> whisper</h1>
-          <h2 class="article1__subtitle">now we write and read samizdat and sometimes when we gather</h2>
+          <h2 class="article1__subtitle swift-up-text">now we write and read samizdat and sometimes when we gather</h2>
         </div>
 
         <div class="article1__content-box--right">
@@ -46,29 +46,29 @@
             They put anybody they want on trial and put sane people in asylums - always they; we are powerless. Things have almost reached rock-bottom. A universal spiritual death has already touched us all. Physical death will soon flare up and consume us and our children. But, as before, we still smile in a cowardly fashion and mumble with our tongues tied. What can we do to stop it? We haven't the strength. We have been so hopelessly dehumanised that for today's rationof food we are willing to abandon all our principles, our souls and the efforts of our predecessors, as well as all the opportunities for our descendants,
 Just don't disturb our fragile existence!
           </p>
-          <p class="article1__content--main">
+          <p class="article1__content--main hidden-bottom">
             We lack resolution, pride and enthusiasm. We don't even fear universal nuclear death, nor do we fear a third world war — perhaps we can hidein crevices. We just fear acts of civil courage. We are afraid to lag behind the herd and to take one step alone — and suddenly to find ourselves without white bread, heating gas and a Moscow registration. What was drummed in our ears at political courses we have now internalised: live comfortably and all will be well ever after. You cannot escape your environment and social conditions. Existence determines consciousness. What does it have to do with us? We cannot do anything about it.
           </p>
-          <p class="article1__content--main">
+          <p class="article1__content--main hidden-bottom">
             But we can! We lie to ourselves to preserve our peace of mind. It is
 not they who should be blamed but ourselves. One can object, but cannot imagine what to do. Gags have been stuffed into our mouths. Nobody wants to listen to us and nobody asks our opinion. How can we force them to listen to us? It is impossible to change their minds. It would be logical
 to vote them out of office, but there are no elections in our country. In the West people resort to strikes and protest demonstrations, but we are too downtrodden and it is too horrifying for us. How can one suddenly renounce a job and take to the streets? Other fatal paths tested during the last century by our bitter Russian history are even less suitable for us, and truly we do not need them.
           </p>
-          <p class="article1__content--main">
+          <p class="article1__content--main hidden-bottom">
             Now that the axes have done their work and everything that was sown has sprouted, we can see that the young and presumptuous people who thought they would make our country just and happy through terror, bloody rebellion and civil war were themselves misled. No thanks, fathers of enlightenment! Now we know that infamous methods breed infamous results . . . Let our hands be clean!
           </p>
-          <p class="article1__content--main">
+          <p class="article1__content--main hidden-bottom">
             Is the circle closed? Is there really no way out? Is there only one thing left to do - to wait without taking any action? Maybe something will happen by itself. But it will never happen as long as we daily acknowledge, extol and strengthen — and do not sever ourselves from — the most perceptible of its aspects: lies. When violence intrudes into peaceful life,
 its face glows with self-confidence, as if it were carrying a banner and shouting: 'I am violence. Run away, make way for me — I will crush you.' But violence quickly grows old. After only a few years it loses confidence in itself, and in order to maintain a respectable face it summons falsehood as its ally — since violence can conceal itself with nothing except lies, and the lies can be maintained only by violence. Violence does not lay its paw on every shoulder every day: it demands from us only obedience to lies and daily participation in lies. And this submissiveness is the crux of the matter. The simplest and most accessible key to our self-neglected liberation is this: personal non-participation in lies. Though lies may conceal everything, though lies may control everything, we should be obstinate about this one small point: let them be in control but without any help from any of us. This opens a breach in the imaginary encirclement caused by our inaction. It is the easiest thing for us to do and the most destructive for the lies. Because when people renounce lies it cuts short their existence. Like
 a virus, they can survive only in a living organism.
           </p>
-          <p class="article1__content--main">
+          <p class="article1__content--main hidden-bottom">
             Let us admit it: we have not matured enough to march into the squares and shout the truth out loud or to express aloud what we think. It is not necessary. It's dangerous. But let us refuse to say what we do not think. This is our path, the easiest and the most accessible one, which allows for our inherent, well-rooted cowardice. And it is much easier (it's shocking even to say this) than the sort of civil disobedience that Gandhi advocated. Our path is not that ofgiving conscious support to lies about anything at all. And once we realise where the perimeters of falsehood are (everyone sees them in his own way), our path is to walk away from this gangrenous boundary. If we did not paste together the dead bones and scales of ideology, if we did not sew together rotting rags, we would be astonished how quickly the lies would be rendered helpless and would subside. That which should be naked would then really appear naked before the whole world.
           </p>
-          <p class="article1__content--main">
+          <p class="article1__content--main hidden-bottom">
             So in our timidity, let us each make a choice: whether to remain consciously a servant of falsehood (of course, it is not out of inclination but to feed one's family that one raises one's children in the spirit of lies), or to shrug off the lies and become an honest man worthy of respect from one's children and contemporaries. <br> And from that day onward he:
           </p>
-          <p class="article1__content--main article1__content--main-list">
+          <p class="article1__content--main article1__content--main-list hidden-left">
             <span>&rsaquo; </span>will not sign, write or print in any way a single phrase which in his opinion distorts the truth <br>
             <span>&rsaquo; </span>will utter such a phrase neither in private conversation nor in public, neither on his own behalf nor at the prompting of someone else, neither in the role of agitator, teacher, educator, nor as an actor <br>
             <span>&rsaquo; </span>will not depict, foster or broadcast a single idea in which he can see a distortion of the truth, whether it be in painting, sculpture, photography, technical science or music <br>
@@ -77,14 +77,14 @@ a virus, they can survive only in a living organism.
             <span>&rsaquo; </span>will immediately walk out of a meeting, session, lecture, performance or film if he hears a speaker tell lies, or purvey ideological nonsense or shameless propaganda <br>
             <span>&rsaquo; </span>will not subscribe to or buy a newspaper ormagazine in which information is distorted and primary facts are concealed.
           </p>
-          <p class="article1__content--main">
+          <p class="article1__content--main hidden-bottom">
             I have not enumerated, of course, all possible and necessary ways of avoiding lies, but whoever begins to cleanse himself will easily apply the cleansing pattern to other cases. It will not be the same for everybody at first. Some will lose their jobs. But there are no loopholes for anybody who wants to be honest. On any given day, any one of us, even those securely working in technical sciences, will be confronted with at least one of the above choices. Either truth or falsehood: towards spiritual independence or towards spiritual servitude.
           </p>
 
           
           <div class="article1__button-box">
 
-            <div class="article1__button--like-box">
+            <div class="article1__button--like-box hidden-left stagger">
               <button class="article1__button--like" id="like-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
@@ -93,7 +93,7 @@ a virus, they can survive only in a living organism.
               </button>
             </div>
 
-            <div class="article1__button--share-box">
+            <div class="article1__button--share-box hidden-left stagger">
               <button class="article1__button--share">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"/>
@@ -103,7 +103,7 @@ a virus, they can survive only in a living organism.
               </button>
             </div>
             
-            <div class="article1__button--bookmark-box">
+            <div class="article1__button--bookmark-box hidden-left stagger">
               <button class="article1__button--bookmark">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
                   <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
