--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </li>
 
           <li class="sidebar__item">
-            <a href="articlev1.html" class="sidebar__link sidebar__article">Article page v1.0
+            <a href="articlev1.html" class="sidebar__link sidebar__article">Article page
               <svg
                 fill="none"
                 stroke="currentColor"
@@ -116,7 +116,7 @@
             </a>
           </li>
           <li class="sidebar__item sidebar__article">
-            <a href="articlev2.html" class="sidebar__link">Article page v2.0
+            <a href="articlev2.html" class="sidebar__link">Print Edition
               <svg
                 fill="none"
                 stroke="currentColor"
@@ -329,31 +329,31 @@
           <span>5 min read</span>
         </div>
 
-        <div class="blog__bottom-item">
+        <div class="blog__bottom-item hidden-right">
           <h1 class="blog__bottom-title">The Last Day before Christmas</h1>
           <p class="blog__bottom-content">A wintry, clear night came. The stars peeped out. The crescent moon rose majestically in the sky to give light to good people.</p>
           <span>4 min read</span>
         </div>
 
-        <div class="blog__bottom-item">
+        <div class="blog__bottom-item hidden-right">
           <h1 class="blog__bottom-title">Noise and Thunder at the end of Kiev</h1>
           <p class="blog__bottom-content">Captain gorobets is celebrating his son's wedding. Many people liked to eat well, better still did they like to drink.</p>
           <span>7 min read</span>
         </div>
 
-        <div class="blog__bottom-item">
+        <div class="blog__bottom-item hidden-right">
           <h1 class="blog__bottom-title">Story Told by the Church Beadle</h1>
           <p class="blog__bottom-content">Foma Grigorievich was known to have this special sort of quirk: he mortally disliked telling the same thing over again.</p>
           <span>5 min read</span>
         </div>
 
-        <div class="blog__bottom-item">
+        <div class="blog__bottom-item hidden-right">
           <h1 class="blog__bottom-title">The Last Day before Christmas</h1>
           <p class="blog__bottom-content">A wintry, clear night came. The stars peeped out. The crescent moon rose majestically in the sky to give light to good people.</p>
           <span>4 min read</span>
         </div>
 
-        <div class="blog__bottom-item">
+        <div class="blog__bottom-item hidden-right">
           <h1 class="blog__bottom-title">Noise and Thunder at the end of Kiev</h1>
           <p class="blog__bottom-content">Captain gorobets is celebrating his son's wedding. Many people liked to eat well, better still did they like to drink.</p>
           <span>7 min read</span>
@@ -425,7 +425,7 @@
           </a>
         </div>
 
-        <div class="blog__featured-article">
+        <div class="blog__featured-article hidden-bottom">
           <img src="images/featured3.jpg" class="blog__featured-img" alt="Jean-Honoré Fragonard - Psyche showing her Sisters her Gifts from Cupid">
           <h2 class="blog__featured-title">Five key Renaissance Paintings from the Collection</h2>
           <div class="blog__featured-detail">
@@ -451,7 +451,7 @@
           </a>
         </div>
 
-        <div class="blog__featured-article">
+        <div class="blog__featured-article hidden-bottom">
           <img src="images/featured4.jpg" class="blog__featured-img" alt="Claude-Joseph Vernet - A Landscape at Sunset" style="filter: grayscale(1) brightness(150%)">
           <h2 class="blog__featured-title">Renaissance Art - Europe's Cultural Rebirth</h2>
           <div class="blog__featured-detail">
@@ -477,7 +477,7 @@
           </a>
         </div>
 
-        <div class="blog__featured-article">
+        <div class="blog__featured-article hidden-bottom">
           <img src="images/featured5.jpeg" class="blog__featured-img" alt="Joseph Wright 'of Derby' - An Experiment on a Bird in the Air Pump">
           <h2 class="blog__featured-title">The Works of Joseph Wright of Derby</h2>
           <div class="blog__featured-detail">
